--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<%= current_user.email %>
+<% if can? :manage, current_user %>
+  <p>current_userがmanage権限を持っているときだけ表示されます</p>
+<% end %>
